# joplin-mcp-server

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  JOPPY_UPGRADE.md  README.md  pyproject.toml
.claude/commands/: upgrade-joppy.md
.github/workflows/: tests.yml
src/joplin_mcp/: __init__.py  __main__.py  client.py  config.py  errors.py  models.py  server.py
src/joplin_mcp/tools/: __init__.py  notebooks.py  notes.py  resources.py  tags.py
tests/: __init__.py  conftest.py  test_notebooks.py  test_notes.py  test_resources.py  test_tags.py
