[project]
name = "joplin-mcp-server"
version = "0.1.0"
description = "MCP server for Joplin note-taking application"
requires-python = ">=3.11"
dependencies = [
    "joppy==1.0.1",
    "mcp",
]

[project.scripts]
joplin-mcp = "joplin_mcp.server:main"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/joplin_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
